--- a/package.json
+++ b/package.json
@@ -15,9 +15,13 @@
     "@types/react-dom": "18.0.10",
     "eslint": "8.32.0",
     "eslint-config-next": "13.1.2",
+    "firebase": "^9.15.0",
+    "firebase-tools": "^11.20.0",
+    "global": "^4.4.0",
     "next": "13.1.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "4.9.4"
+    "typescript": "4.9.4",
+    "zustand": "^4.3.2"
   }
 }
